# maqraisdk

./: Application_insights.py  MANIFEST.in  RAI_Agent_usecase.ipynb  README.md  __init__.py  exception.py  host.json  main.py  pyproject.toml  requirements.txt  setup.py
MAQ_RAI_SDK/maq_rai_sdk/: _configuration.py
Reviewer_updater/: __init__.py  function.json
Testcase_generator/: __init__.py  function.json
Usage/: RAI_Agent.ipynb
rai_agent/: __init__.py
rai_agent/agents/: __init__.py  reviewer_agents.py  testcase_generator_agents.py  updater_agents.py
rai_agent/config/: __init__.py  reviewer_agents_config.py  reviewer_tasks_config.py  testcase_generator_agents_config.py  testcase_generator_tasks_config.py  updater_agents_config.py  updater_tasks_config.py
rai_agent/connections/: __init__.py  custom_llm.py  open_ai.py
rai_agent/crew/: __init__.py  reviewer_crew.py  testcase_generator_crew.py  updater_crew.py
rai_agent/success_metrics/: compliance.py  task_success_rate.py
rai_agent/tasks/: __init__.py  reviewer_tasks.py  testcase_generator_tasks.py  updater_tasks.py
rai_agent/utility/: __init__.py  promptReviewer.py  promptTestcaseGenerator.py  promptUpdater.py
usage/: RAI_Agent.ipynb
