[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maq-rai-sdk"
version = "0.1.0"
description = "A Python SDK for reviewing and updating prompts, and generating test cases for faster Copilot development with comprehensive Responsible AI (RAI) compliance."
readme = "README.md"
license = "MIT"
authors = [
    {name = "MAQ Software", email = "customersuccess@maqsoftware.com"}
]
keywords = ["ai", "responsible-ai", "prompt-engineering", "testing", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing"
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1",
    "types-PyYAML>=6.0.12.20250516", 
    "PyYAML>=6.0.2",
    "onnxruntime>=1.22.0",
    "openai>=1.0.0",
    "pydantic-core>=2.41.4",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[project.urls]
"Homepage" = "https://github.com/MAQ-Software-Solutions/maqraisdk"
"Bug Tracker" = "https://github.com/MAQ-Software-Solutions/maqraisdk/issues"
"Documentation" = "https://github.com/MAQ-Software-Solutions/maqraisdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["maqraisdk*"]

[tool.setuptools.package-dir]
maqraisdk = "rai_agent"